Another attempt to fix x overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@ html {
 
 body {
   overflow-x: hidden;
+  overscroll-behavior-x: contain;
   max-width: 100vw;
 }
 
